--- a/results/read_results.ipynb
+++ b/results/read_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('subgroup_0401_1620.csv', sep=';')\n",
+    "\n",
+    "langs = df['Language'].unique()\n",
+    "targets_for_langs = []\n",
+    "all_targets = []\n",
+    "for lang in langs:\n",
+    "    targets = df.loc[df['Language'] == lang]['bias_group'].unique()\n",
+    "    all_targets = all_targets + list(targets)\n",
+    "    targets_for_langs.append(targets)\n",
+    "\n",
+    "all_targets = list(set(all_targets))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -22,63 +41,74 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('subgroup_0401_1620.csv', sep=';')\n",
-    "df = df[(df['p-value'] < 0.05) & (df['bias_score'] >50)]\n",
-    "langs = df['Language'].unique()\n",
     "langs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['black people',\n",
-       " 'indigenous people',\n",
-       " 'all',\n",
-       " 'jews',\n",
-       " 'gay people',\n",
-       " 'asian people',\n",
-       " 'immigrant',\n",
-       " 'women',\n",
-       " 'Muslims',\n",
-       " 'immigrants',\n",
-       " 'foreigners',\n",
-       " 'jewish people',\n",
-       " 'disabled people',\n",
-       " 'refugees',\n",
-       " 'trans people']"
+       "[array(['all', 'black people', 'refugees', 'disabled people', 'jews',\n",
+       "        'trans people', 'women', 'gay people'], dtype=object),\n",
+       " array(['all', 'gay people', 'women', 'Muslims', 'trans people',\n",
+       "        'immigrants', 'black people', 'disabled people'], dtype=object),\n",
+       " array(['all', 'gay people', 'Muslims', 'disabled people', 'black people',\n",
+       "        'women', 'trans people', 'immigrants'], dtype=object),\n",
+       " array(['all', 'jews', 'women', 'disabled people', 'black people',\n",
+       "        'trans people', 'indigenous people', 'gay people'], dtype=object),\n",
+       " array(['all', 'disabled people', 'women', 'refugees', 'Muslims',\n",
+       "        'black people', 'trans people', 'gay people'], dtype=object),\n",
+       " array(['all', 'gay people', 'women', 'immigrants', 'trans people',\n",
+       "        'black people', 'disabled people', 'Muslims'], dtype=object),\n",
+       " array(['all', 'asian people', 'disabled people', 'jewish people',\n",
+       "        'immigrants', 'immigrant', 'women', 'trans people', 'gay people'],\n",
+       "       dtype=object),\n",
+       " array(['all', 'black people', 'trans people', 'women', 'jews',\n",
+       "        'gay people', 'indigenous people', 'disabled people'], dtype=object),\n",
+       " array(['all', 'Muslims', 'disabled people', 'trans people', 'women',\n",
+       "        'black people', 'gay people', 'foreigners'], dtype=object),\n",
+       " array(['all', 'trans people', 'women', 'immigrants', 'black people',\n",
+       "        'disabled people', 'Jews', 'gay people'], dtype=object)]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "targets_for_langs = []\n",
-    "all_targets = []\n",
-    "for lang in langs:\n",
-    "    targets = df.loc[df['Language'] == lang]['bias_group'].unique()\n",
-    "    all_targets = all_targets + list(targets)\n",
-    "    targets_for_langs.append(targets)\n",
-    "\n",
-    "all_targets = list(set(all_targets))\n",
-    "all_targets"
+    "targets_for_langs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[(df['p-value'] < 0.05) & (df['bias_score'] >50)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +169,19 @@
        "      <td>NaN</td>\n",
        "      <td>68.31</td>\n",
        "      <td>61.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jews</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>indigenous people</th>\n",
@@ -329,6 +372,7 @@
       "text/plain": [
        "                      de     du     en      es  fr      it     po     pt  \\\n",
        "black people         NaN    NaN  89.67  76.255 NaN  79.005    NaN    NaN   \n",
+       "Jews                 NaN    NaN    NaN     NaN NaN     NaN    NaN    NaN   \n",
        "indigenous people    NaN    NaN    NaN     NaN NaN     NaN    NaN    NaN   \n",
        "all                61.84    NaN    NaN   73.66 NaN     NaN  55.56    NaN   \n",
        "jews                 NaN    NaN    NaN   83.76 NaN     NaN    NaN    NaN   \n",
@@ -346,6 +390,7 @@
        "\n",
        "                      zh     ar  \n",
        "black people       68.31   61.7  \n",
+       "Jews                 NaN    NaN  \n",
        "indigenous people    NaN    NaN  \n",
        "all                82.14    NaN  \n",
        "jews                 NaN    NaN  \n",
@@ -362,7 +407,7 @@
        "trans people       86.46    NaN  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -435,6 +480,19 @@
        "      <td>67.9</td>\n",
        "      <td>75.32</td>\n",
        "      <td>71.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jews</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>indigenous people</th>\n",
@@ -625,6 +683,7 @@
       "text/plain": [
        "                      de     du     en     es      fr     it     po     pt  \\\n",
        "black people        57.8    NaN  75.85  72.42   92.39  74.68    NaN   67.9   \n",
+       "Jews                 NaN    NaN    NaN    NaN     NaN    NaN    NaN    NaN   \n",
        "indigenous people    NaN    NaN    NaN  74.58     NaN    NaN    NaN    NaN   \n",
        "all                  NaN    NaN  65.02    NaN  93.145  67.98    NaN  66.73   \n",
        "jews                 NaN    NaN    NaN    NaN     NaN    NaN    NaN  74.23   \n",
@@ -642,6 +701,7 @@
        "\n",
        "                       zh     ar  \n",
        "black people        75.32  71.93  \n",
+       "Jews                  NaN    NaN  \n",
        "indigenous people     NaN    NaN  \n",
        "all                 78.21    NaN  \n",
        "jews                  NaN    NaN  \n",
@@ -658,7 +718,7 @@
        "trans people       76.485  83.51  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +745,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +773,7 @@
     "\n",
     "def highlight_non_nan(val):\n",
     "    if pd.notna(val):\n",
-    "        return 'background-color: green'\n",
+    "        return 'background-color: orange'\n",
     "    else:\n",
     "        return ''\n",
     "\n",
